--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "untitled-project",
+  "homepage": "https://bakhodirchorievv.github.io/consulting-company-project",
+  "name": "consulting-company-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
